--- a/20世纪最大骗局-钻石.html
+++ b/20世纪最大骗局-钻石.html
@@ -1,4 +1,4 @@
 戴比尔斯
 http://www.luofans.com/articles/2635
 http://business.sohu.com/20161014/n470310551.shtml
-喜马拉雅 2016-10-03 逻辑思维
+喜马拉雅 2016-10-03 逻辑思维 http://xima.tv/B74kaV
